Problems moving animation channels up and down in dope sheet/action editor #38897

Closed
opened 2014-03-01 02:08:12 +01:00 by Stephen Hamacek · 16 comments

System Information
Operating system and graphics card

Mac OSX 10.8.5
GeForce GTX 660 3072 MB

Blender Version
Broken: official 2.69, through latest build hash 8fa15d1
Worked: (optional)

Short description of error

Moving Channels up and down in dope sheet/action editor working only sporadically. Tried both pageup/pagedown as well as menu Channel>move.

Sometimes it works for one movement then stops, sometimes I get a burst of 3 or 4 moves then stops working.

Tried this with rigged character - seems OK, but with linked proxy character in scene, problem appears, though not always immediately.

Exact steps for others to reproduce the error

  • Link and proxify a character rig
  • select all bones and insert keyframe (I)
  • go to dope sheet/action editor
  • select various channels and move up and down (pgup/pgdown or menu) keeping mouse over channel list.
  • keep selecting different channels and moving them. For me issue appears sometimes after a minute or so or shifting channels.

Hope someone can reproduce this. I can't see anything else I'm doing wrong. The character I'm using is more or less rigify based btw.

**System Information** Operating system and graphics card Mac OSX 10.8.5 GeForce GTX 660 3072 MB **Blender Version** Broken: official 2.69, through latest build hash 8fa15d1 Worked: (optional) **Short description of error** Moving Channels up and down in dope sheet/action editor working only sporadically. Tried both pageup/pagedown as well as menu Channel>move. Sometimes it works for one movement then stops, sometimes I get a burst of 3 or 4 moves then stops working. Tried this with rigged character - seems OK, but with linked proxy character in scene, problem appears, though not always immediately. **Exact steps for others to reproduce the error** - Link and proxify a character rig - select all bones and insert keyframe (I) - go to dope sheet/action editor - select various channels and move up and down (pgup/pgdown or menu) keeping mouse over channel list. - keep selecting different channels and moving them. For me issue appears sometimes after a minute or so or shifting channels. Hope someone can reproduce this. I can't see anything else I'm doing wrong. The character I'm using is more or less rigify based btw.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @StephenHamacek

Added subscriber: @StephenHamacek

I've figured out what's going on here I think. As I only had about half the bones visible at the time, the up/down seems to be taking into account the non-displayed bones in the list too, So sometimes the channels are 'invisibly' moving up and down among channels I can't see.

Not sure how this should work exactly with that in mind. But certainly confusing to have to show all bones to reorganise in the list.

I've figured out what's going on here I think. As I only had about half the bones visible at the time, the up/down seems to be taking into account the non-displayed bones in the list too, So sometimes the channels are 'invisibly' moving up and down among channels I can't see. Not sure how this should work exactly with that in mind. But certainly confusing to have to show all bones to reorganise in the list.

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2014-03-01 11:17:23 +01:00

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung

Patch is ready, adding @JoshuaLeung here as well, waiting for his review.

But note it’s rather unlikely it makes it into 2.70, this is not a regression (hardly a bug, actually, more like usability issue), it’s a bit late for that kind of changes now.

Patch is ready, adding @JoshuaLeung here as well, waiting for his review. But note it’s rather unlikely it makes it into 2.70, this is not a regression (hardly a bug, actually, more like usability issue), it’s a bit late for that kind of changes now.

This issue was referenced by blender/blender-addons-contrib@1f3655d224

This issue was referenced by blender/blender-addons-contrib@1f3655d224196129fc6daf20e678199b95321bff

This issue was referenced by 1f3655d224

This issue was referenced by 1f3655d224196129fc6daf20e678199b95321bff

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1f3655d224.

Closed by commit 1f3655d224.

@mont29 I've just tried the latest build 2aff243 to check this out, but now the channels won't move up/down at all, only move to top or bottom (shift-pageup/pagedown).

I tried it on a character with all active animation channels visible. Let me know if you need more details. Cheers.

@mont29 I've just tried the latest build 2aff243 to check this out, but now the channels won't move up/down at all, only move to top or bottom (shift-pageup/pagedown). I tried it on a character with all active animation channels visible. Let me know if you need more details. Cheers.

I need a .blend file, as far as I can tell it works OK for me…

I need a .blend file, as far as I can tell it works OK for me…

Here's a blend with one of the rigs I'm using atm. Haven't tried rc2 yet, but def. seems to not work in 2aff243

Here's a blend with one of the rigs I'm using atm. Haven't tried rc2 yet, but def. seems to not work in 2aff243

Your file works OK for me… UP/DOWN/TOP/BOTTOM, all four works here.

Your file works OK for me… UP/DOWN/TOP/BOTTOM, all four works here.

Strange indeed. I definitely can't move channels except top/bottom in that build (not just in this blend). RC1 OK. I guess I'll wait and try another build soon...

Strange indeed. I definitely can't move channels except top/bottom in that build (not just in this blend). RC1 OK. I guess I'll wait and try another build soon...

Just tried with 2.7 official and all works perfectly so far. Thanks for implementing this great enhancement!

Just tried with 2.7 official and all works perfectly so far. Thanks for implementing this great enhancement!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38897
No description provided.